Refactor: Update DTOs, secure endpoints, fix repositories, and add AI integration